# aiibot_bringup

./: CMakeLists.txt  README.md
launch/: avoide.launch  base_control_demo_1.launch  base_control_demo_2.launch  base_control_demo_3.launch  follow.launch  run.launch  stirun.launch
src/: cmd_boost_node.cpp  monitor_serial_node.cpp  recv_node.cpp  send_node.cpp  tf_broadcaster_node.cpp
